# FocusMeter

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.hpp
Source/CrossPlatform/Controller/: FMController.cpp  FMController.hpp
Source/CrossPlatform/Database/: SQLDatabase.cpp  SQLDatabase.hpp
Source/CrossPlatform/Utils/: ResourceHandler.hpp  Settings.hpp  Switch.hpp
Source/UbuntuProject/: CMakeLists.txt
Source/UbuntuProject/UbuntuApp/: CMakeLists.txt  Main.cpp
Source/UbuntuProject/UbuntuApp/GUI/: MainWindow.cpp  MainWindow.hpp
Source/UbuntuProject/UbuntuCmd/: CMakeLists.txt  main.cpp
Source/focusmeter/FocusMeter/: main.mm
Source/focusmeter/focusmeter/: main.cpp
Source/focusmeter/focusmeter.xcodeproj/: project.pbxproj
